--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-dom": "^16.13.1",
     "react-map-interaction": "^2.0.0",
     "react-redux": "^7.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-social-login-buttons": "^3.1.0",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
